--- a/ParkingManager/resources.qrc
+++ b/ParkingManager/resources.qrc
@@ -1,5 +1,7 @@
 <RCC>
     <qresource prefix="/assets">
         <file>icons/temperature.png</file>
+        <file>icons/temperature.svg</file>
+        <file>icons/temperature-mini.svg</file>
     </qresource>
 </RCC>
