--- a/ParkingManager/resources.qrc
+++ b/ParkingManager/resources.qrc
@@ -5,5 +5,7 @@
         <file>assets/icons/temperature.svg</file>
         <file>assets/icons/temperature-mini.svg</file>
         <file>assets/icons/dashboard.svg</file>
+        <file>assets/icons/report.svg</file>
+        <file>assets/icons/chart.svg</file>
     </qresource>
 </RCC>
