--- a/ParkingManager/style.qss
+++ b/ParkingManager/style.qss
@@ -1,3 +1,22 @@
-SensorBar {
-    border: 1px solid black;
+QStackedWidget {
+    border: 1px solid white;
+    border-radius: 8px;
+    background: white;
+}
+
+QListWidget {
+    border: 1px solid lightgray;
+    border-radius: 8px;
+    background: lightgray;
+}
+
+QListWidget::item {
+    padding: 10px;
+    background: white;
+    border-radius: 8px;
+}
+
+QListWidget::item:selected{
+    background: lightblue;
+    color: black;
 }
