--- a/ParkingManager/resources.qrc
+++ b/ParkingManager/resources.qrc
@@ -7,6 +7,7 @@
         <file>assets/icons/report.svg</file>
         <file>assets/icons/chart.svg</file>
         <file>assets/images/car.png</file>
+        <file>assets/images/pink-car.svg</file>
     </qresource>
     <qresource prefix="/style">
         <file>style.qss</file>
