--- a/ParkingManager/resources.qrc
+++ b/ParkingManager/resources.qrc
@@ -8,6 +8,7 @@
         <file>assets/icons/chart.svg</file>
         <file>assets/images/car.png</file>
         <file>assets/images/pink-car.svg</file>
+        <file>assets/icons/edit.svg</file>
     </qresource>
     <qresource prefix="/style">
         <file>style.qss</file>
