--- a/ParkingManager/resources.qrc
+++ b/ParkingManager/resources.qrc
@@ -6,9 +6,11 @@
         <file>assets/icons/dashboard.svg</file>
         <file>assets/icons/report.svg</file>
         <file>assets/icons/chart.svg</file>
-        <file>assets/images/car.png</file>
-        <file>assets/images/pink-car.svg</file>
         <file>assets/icons/edit.svg</file>
+        <file>assets/icons/folder.svg</file>
+        <file>assets/icons/add.svg</file>
+        <file>assets/icons/new-file.svg</file>
+        <file>assets/icons/file.svg</file>
     </qresource>
     <qresource prefix="/style">
         <file>style.qss</file>
